# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LearnVK.h  README.md  cpp.hint  main.cpp
include/: Actor.h  Application.h  AssetLoader.h  EngineTimer.h  Macro.h  Model.h  Module.h  PhysicsModule.h  RenderModule.h  Scene.h  pch.h
include/Common/: Functions.h  LogUtils.h  Macro.h  Parallel.h  Types.h  pch.h
include/Engine/: Actor.h  AssetLoader.h  Component.h  Engine.h  EngineInterface.h  EngineTimer.h  JobSystem.h  JsonParser.h  Manager.h  Material.h  Model.h  Parameters.h  RenderModule.h  RenderSystemInterface.h  Window.h
include/RenderSystem/: RenderShader.h  RenderSystem.h  RenderSystemInterface.h  RenderSystemResourceIDGenerator.h  RenderWindow.h
shaders/: CompileGLSL.bat  README.md
src/: Application.cpp  AssetLoader.cpp  CMakeLists.txt  EngineTimer.cpp  Model.cpp  PhysicsModule.cpp  RenderModule.cpp
src/Engine/: Application.cpp  AssetLoader.cpp  Engine.cpp  EngineTimer.cpp  JobSystem.cpp  JsonParser.cpp  Model.cpp  PhysicsModule.cpp  RenderModule.cpp  Window.cpp
src/RenderSystem/: RenderBuffer.cpp  RenderBuffer.h  RenderShader.h  RenderSystem.cpp  RenderSystem.h  RenderTexture.h  RenderUnit.h  RenderWindow.cpp  RenderWindow.h
src/RenderSystem/DX11/: DX11ConvertUtils.h  DX11RenderBuffer.h  DX11RenderSystem.cpp  DX11RenderTexture.h
src/RenderSystem/imgui/: imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_vulkan.cpp
tests/: CMakeLists.txt  TestJobSystem.h  TestJsonParser.h  TestMain.cpp  TestParallel.h  TestWindow.cpp  TestWindow.h
